# wunderpahkina-vol8-ratkaisuehdotus

./: LICENSE  README.md  alastalon_salissa_lyhennetty.txt  the-shortest-edition.cabal
src/: Main.hs
