name:                the-shortest-edition
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Joonatan Kallio
maintainer:          example@example.com
copyright:           2017 Joonatan Kallio
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable the-shortest-edition
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, time
